turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:13: error: not found: value RIGHt
var rule:Array[Array[Array[Int]]] = (((1, RIGHT, 0),(1, RIGHt, 1)), ((0, NOTURN, 0), (0, NOTURN, 1))) // Change this
                                                        ^